# ubisoft-laforge-toxbuster

./: README.md  main.py  pyproject.toml  requirements.txt  run_CCC.bat  run_CONDA.bat
configs/: train_on_CCC.json  train_on_CCC_no_context.json  train_on_CONDA.json  train_on_CONDA_no_context.json
data/: CONDA.csv
src/Benchmark/: Benchmarker.py  BenchmarkerConfig.py
src/Data/: Collate.py  Dataset.py  utils.py
src/Data_PipeLine/: DataOutput.py  DataPipeline.py  DataRetrieval.py  DataTransformation.py  LabelStrategy.py  format_inference_output.py
src/Evaluation/: EvalMetric.py  EvalOutput.py  Evaluator.py  TokensToSentence.py
src/Infer/: Inferer.py  InfererConfig.py
src/Models/: BertWithSpeakerSegmentation.py  BertWithSpeakerSegmentationConfig.py  ToxicSentenceClassification.py  ToxicTokenClassification.py  utils.py
src/Training/: EarlyStop.py  Trainer.py  TrainerConfig.py  utils.py
