[tool.poetry]
name = "tox_transformer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^21.10b0"
aiohttp = "^3.8.0"
aiohttp_cors = "^0.7.0"
poethepoet = "^0.10.0"
transformers = "^4.12.2"
torch = "^1.11.0"
colorama = "^0.4.4"
datasets = "^1.15.1"
prettytable = "^2.4.0"
pandas = "^1.3.5"
loguru = "^0.6.0"
tensorboard = "^2.9.1"
setuptools = "^63.1.0"
torchaudio = "^0.12.0"
torchvision = "^0.13.0"
scikit-learn = "^1.1.1"
pyodbc = "^4.0.34"
eval4ner = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
